better server socker shutdown. no more danlging connections. smart handling of future objs when they are part of a inst application -- futures are resolved the moment the computation needs them -- in Inst.apply(). Preparse code to remove line and block comments.